# api/app/models/author.rb
@@ -1,0 +1,7 @@
+class Author < ApplicationRecord
+  has_many :socials, dependent: :destroy
+  has_many :articles, dependent: :destroy
+
+  validates :name, presence: true, uniqueness: true
+  validates :birthdate, :photo_url, :public_key, presence: true
+end
