# api/app/models/social.rb
@@ -1,0 +1,6 @@
+class Social < ApplicationRecord
+  belongs_to :author
+
+  validates :profile_link, :slug, :description, presence: true
+  validates :slug, uniqueness: true
+end
