# api/config/routes.rb
@@ -1,10 +1,10 @@
 Rails.application.routes.draw do
   mount Rswag::Api::Engine => '/api-docs'
   mount Rswag::Ui::Engine => '/'
-  # Define your application routes per the DSL in https://guides.rubyonrails.org/routing.html
+  resources :authors
+  resources :socials
+  resources :articles
 
-  # Reveal health status on /up that returns 200 if the app boots with no exceptions, otherwise 500.
-  # Can be used by load balancers and uptime monitors to verify that the app is live.
   get "up" => "rails/health#show", as: :rails_health_check
 
 end
